--- a/ginza.html
+++ b/ginza.html
@@ -578,7 +578,7 @@
         <div class="green" id="nakamuratokichi">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1tEomWAtTp/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/B1tEomWAtTp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B1tEomWAtTp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -646,7 +646,7 @@
                     <a href="https://maruyamanori.net/sp/kabuki-za/menu/">HPはこちら</a>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BxjohkdAz3W/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/BxjohkdAz3W/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BxjohkdAz3W/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -700,7 +700,7 @@
         <div class="green" id="sabou">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B8vpLDHANst/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/B8vpLDHANst/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B8vpLDHANst/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -767,7 +767,7 @@
                     <a href="http://www.atticroom.jp/301/">HPはこちら</a>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BpZlC4fHa81/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/BpZlC4fHa81/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BpZlC4fHa81/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -820,7 +820,7 @@
         <div class="green" id="yukinosita">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B3w5ZZSAk7l/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/B3w5ZZSAk7l/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B3w5ZZSAk7l/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -887,7 +887,7 @@
                     <a href="http://funawa.jp/shop/contents?contents_id=228730">HPはこちら</a>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Br7QXcEgB8I/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/Br7QXcEgB8I/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/Br7QXcEgB8I/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -941,7 +941,7 @@
         <div class="green" id="aokomeya">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BPzW-iCA4sS/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/BPzW-iCA4sS/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BPzW-iCA4sS/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -1008,7 +1008,7 @@
                     <a href="http://www.kyo-hayashiya.com/shop/hibiya/">HPはこちら</a>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B18t-QGAONa/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/B18t-QGAONa/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B18t-QGAONa/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -1061,7 +1061,7 @@
         <div class="green" id="chaya">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B7F-KSMA7Sp/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/B7F-KSMA7Sp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B7F-KSMA7Sp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -1129,7 +1129,7 @@
                     <a href="https://www.toraya-group.co.jp/toraya/shops/detail/?id=6">HPはこちら</a>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BGg8SvBkpAz/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;" class="instahover"> <a href="https://www.instagram.com/p/BGg8SvBkpAz/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BGg8SvBkpAz/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
