mainvisualレスポンシブ

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
 
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" media="(max-width:768px)" href="style.css">
+    <link rel="stylesheet" media="(min-width:768px)" href="pc.css">
+
     <title>Matcha Sweets</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">　
-    <!--
-    <link rel="stylesheet" media="(max-width:1024px)" href="mobile.css">
-    -->
+
+
 
     <!--
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.ico">
     -->
     <!--
@@ -38,7 +41,8 @@
 <body>
     <div class="main-visual">
         <div class="logo">
-            <img src="images/logo1.png" alt="" width="">
+            <img src="images/logo1.png" alt="" width="" class="sp-mainvisual">
+            <img src="images/logo_pc.png" alt="" width="" class="pc-mainvisual">
         </div>
     </div>
 
