--- a/asakusa.html
+++ b/asakusa.html
@@ -735,11 +735,13 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>壽々喜園　浅草本店</h2>
+                    <h2>壽々喜園<br><span>浅草本店</span></h2>
+                    <div class="syosai">
                     <p>名物：抹茶ジェラート<br>
                         営業時間：<br>10：00～ 17：00<br>
                         定休日：不定休</p>
                     <a href="http://www.tocha.co.jp/">HPはこちら</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -977,7 +979,7 @@
                 <script async src="//www.instagram.com/embed.js"></script>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>かぐらちゃかプチ 浅草店</h2>
+                    <h2>かぐらちゃかプチ<br><span>浅草店</span></h2>
                     <p>名物：抹茶トースト<br>
                         営業時間：<br>[月]12:00〜17:00<br>
                         [水~金・土]12:00〜22:00<br>
@@ -991,7 +993,7 @@
         <div class="cream" id="funawacafe">
             <div class="left">
                 <div class="left-box">
-                    <h2>ふなわかふぇ 浅草店</h2>
+                    <h2>ふなわかふぇ<br><span>浅草店</span></h2>
                     <p>名物：抹茶あんみつ<br>
                         営業時間：<br>[月~金]10:00〜19:30 <br>
                         [土・日・祝]10:00〜20:00<br>
@@ -1237,7 +1239,7 @@
         <div class="cream" id="ochaba">
             <div class="left">
                 <div class="left-box">
-                    <h2>OCHABA日本茶クレープ専門店 浅草店</h2>
+                    <h2>OCHABA日本茶クレープ専門店<br><span>浅草店</span></h2>
                     <p>名物：日本茶クレープ<br>
                         営業時間：<br>11: 00～19:00<br>
                         定休日：無休</p>
@@ -1358,7 +1360,7 @@
         <div class="cream" id="skytree">
             <div class="left">
                 <div class="left-box">
-                    <h2>祇園辻利　東京スカイツリータウン・ソラマチ店</h2>
+                    <h2>祇園辻利<br><span>東京スカイツリータウン・ソラマチ店</span></h2>
                     <p>名物：つじりツリーソフト3色<br>
                         営業時間：<br>11: 00～23:00<br>
                         定休日：無休</p>
