行けてくれー

--- a/asakusa.html
+++ b/asakusa.html
@@ -876,12 +876,14 @@
 
         <div class="cream" id="yanagityaya">
             <div class="left">
+               <div class="left-info">
                 <div class="left-box">
                     <h2>やなぎ茶屋</h2>
                     <p>名物：升入り宇治抹茶ティラミス<br>
                         営業時間：<br>10:00～18:00<br>
                         定休日：無休</p>
                     <a href="https://www.create-restaurants.co.jp/shop/index.php?controller=FrontCrShop&action=shop_show&id=1676">HPはこちら</a>
+                </div>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Bt-mjEtgwL8/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/Bt-mjEtgwL8/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
