クリームの挑戦

--- a/asakusa.html
+++ b/asakusa.html
@@ -1001,6 +1001,7 @@
 
         <div class="cream" id="funawacafe">
             <div class="left">
+               <div class="left-info">
                 <div class="left-box">
                     <h2>ふなわかふぇ<br><span>浅草店</span></h2>
                     <p>名物：抹茶あんみつ<br>
@@ -1008,6 +1009,7 @@
                         [土・日・祝]10:00〜20:00<br>
                         定休日：無休</p>
                     <a href="http://funawa.jp/shop/contents?contents_id=228730">HPはこちら</a>
+                </div>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/0luRdCKHEZ/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/0luRdCKHEZ/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -1124,6 +1126,7 @@
 
         <div class="cream" id="kaminariissa">
             <div class="left">
+               <div class="left-info">
                 <div class="left-box">
                     <h2>雷一茶</h2>
                     <p>名物：お濃茶アフォガード<br>
@@ -1131,6 +1134,7 @@
                         [月]9:00〜17:00<br>
                         定休日：無休</p>
                     <a href="https://www.kaminari-issa.com/">HPはこちら</a>
+                </div>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1gk_cZgUs3/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/B1gk_cZgUs3/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -1247,12 +1251,14 @@
 
         <div class="cream" id="ochaba">
             <div class="left">
+               <div class="left-info">
                 <div class="left-box">
                     <h2>OCHABA日本茶クレープ専門店<br><span>浅草店</span></h2>
                     <p>名物：日本茶クレープ<br>
                         営業時間：<br>11: 00～19:00<br>
                         定休日：無休</p>
                     <a href="https://ochaba.net/">HPはこちら</a>
+                </div>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B80Q_s3Abrb/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/B80Q_s3Abrb/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -1368,11 +1374,13 @@
 
         <div class="cream" id="skytree">
             <div class="left">
+               <div class="left-info">
                 <div class="left-box">
                     <h2>祇園辻利<br><span>東京スカイツリータウン・ソラマチ店</span></h2>
                     <p>名物：つじりツリーソフト3色<br>
                         営業時間：<br>11: 00～23:00<br>
                         定休日：無休</p>
+                </div>
                 </div>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BmQe8V9gypa/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/BmQe8V9gypa/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
