スマホフォントサイズ

--- a/asakusa.html
+++ b/asakusa.html
@@ -865,7 +865,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>BOOK AND BED TOKYO 浅草</h2>
+                    <h2>BOOK AND BED TOKYO<br>浅草</h2>
                     <p>名物：溢れる抹茶ラテ<br>
                         営業時間：<br>13:00～20:00<br>
                         定休日：無休</p>
