店舗名小さくした

--- a/ginza.html
+++ b/ginza.html
@@ -639,7 +639,7 @@
         <div class="cream" id="zyugetudo">
             <div class="left">
                 <div class="left-box">
-                    <h2>寿月堂　銀座歌舞伎座店</h2>
+                    <h2>寿月堂<br><span>銀座歌舞伎座店</span></h2>
                     <p>名物：抹茶のモンブランセット<br>
                         営業時間：[月~金]10:00〜18:00 <br>
                         [土~日]10:00〜18:30<br>
@@ -881,7 +881,7 @@
         <div class="cream" id="parla">
             <div class="left">
                 <div class="left-box">
-                    <h2>PARLA　東急プラザ銀座</h2>
+                    <h2>PARLA<br><span>東急プラザ銀座</span></h2>
                     <p>名物：抹茶甘酒マスカルポーネ<br>
                         営業時間：<br>11:00〜23:00<br>
                         定休日：東急プラザ銀座に準ずる</p>
@@ -1122,7 +1122,7 @@
         <div class="cream" id="toraya">
             <div class="left">
                 <div class="left-box">
-                    <h2>虎屋菓寮 銀座店</h2>
+                    <h2>虎屋菓寮<br><span>銀座店</span></h2>
                     <p>名物：宇治金時<br>
                         営業時間：[月~土]11:30〜19:30 <br>
                         [日]11:30〜19:00<br>
