--- a/kagurazaka.html
+++ b/kagurazaka.html
@@ -323,7 +323,7 @@
         <div class="cream" id="saryo">
             <div class="left">
                 <div class="left-box">
-                    <h2>神楽坂 茶寮 本店</h2>
+                    <h2>神楽坂 茶寮<br><span>本店</span></h2>
                     <p>名物：京抹茶のチョコレートフォンデュ<br>
                         営業時間：<br>[月~金]11:30～23:00<br>
                         [土]11:00～23:00<br>
@@ -446,7 +446,7 @@
         <div class="cream" id="kuriko">
             <div class="left">
                 <div class="left-box">
-                    <h2>くりこ庵　神楽坂店</h2>
+                    <h2>くりこ庵<br><span>神楽坂店</span></h2>
                     <p>名物：西尾の抹茶クリーム（たい焼き）<br>
                         営業時間：<br>10:00～21:00<br>
                         定休日：無休</p>
