--- a/nikotama.html
+++ b/nikotama.html
@@ -310,7 +310,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>OMATCHA SALON 玉川髙島屋S･C</h2>
+                    <h2>OMATCHA SALON<br><span>玉川髙島屋S･C</span></h2>
                     <p>名物：和のアフタヌーンティー<br>
                         営業時間：<br>11:00～23:00<br>
                         定休日：玉川髙島屋S･Cに準ずる</p>
@@ -444,7 +444,7 @@
         <div class="cream" id="kurofune">
             <div class="left">
                 <div class="left-box">
-                    <h2>黒船 自由が丘本店 cafe COCOOCEN</h2>
+                    <h2>黒船<br><span>自由が丘本店</span></h2>
                     <p>名物：抹茶かき氷<br>
                         営業時間：<br>10:00～19:00<br>
                         定休日：月曜日</p>
