--- a/nishiogikubo.html
+++ b/nishiogikubo.html
@@ -322,7 +322,7 @@
         <div class="cream" id="tatsutano">
             <div class="left">
                 <div class="left-box">
-                    <h2>銀座立田野 アトレ吉祥寺店</h2>
+                    <h2>銀座立田野<br><span>アトレ吉祥寺店</span></h2>
                     <p>名物：茶寮のあんみつ<br>
                         営業時間：<br>10:00〜21:00 <br>
                         定休日：アトレ吉祥寺に準ずる</p>
