--- a/roppongi.html
+++ b/roppongi.html
@@ -883,7 +883,7 @@
         <div class="cream" id="kinizutuchi">
             <div class="left">
                 <div class="left-box">
-                    <h2>木と水と土と 表参道店</h2>
+                    <h2>木と水と土と<br><span>表参道店</span></h2>
                     <p>名物：宇治抹茶パンケーキ<br>
                         営業時間：<br>10:00〜22:00<br>
                         定休日：無休</p>
@@ -992,7 +992,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>HOMIBING 表参道店</h2>
+                    <h2>HOMIBING<br><span>表参道店</span></h2>
                     <p>名物：抹茶パンケーキ<br>
                         営業時間：<br>11:00～ 21:30<br>
                         定休日：無休</p>
@@ -1125,7 +1125,7 @@
         <div class="cream" id="nanaya">
             <div class="left">
                 <div class="left-box">
-                    <h2>ななや　青山店</h2>
+                    <h2>ななや<br><span>青山店</span></h2>
                     <p>名物：抹茶ジェラート<br>
                         営業時間：<br>11:00〜19:00 <br>
                         定休日：火曜日</p>
