--- a/sibuya.html
+++ b/sibuya.html
@@ -763,7 +763,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>kawara CAFE&amp;DINING 宇田川店</h2>
+                    <h2>kawara CAFE&amp;DINING<br><span>宇田川店</span></h2>
                     <p>名物：パンケーキ<br>
                         営業時間：<br>11:45〜0:00<br>
                         定休日：無休</p>
@@ -884,7 +884,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>伊右衛門サロン 渋谷ヒカリエ店</h2>
+                    <h2>伊右衛門サロン<br><span>渋谷ヒカリエ店</span></h2>
                     <p>名物：伊右衛門サロンのビーガンおやつワゴン<br>
                         営業時間：<br>[月~土]11:00〜23:30 <br>
                         [日]11:00〜23:00<br>
@@ -897,7 +897,7 @@
         <div class="cream" id="azabusabo">
             <div class="left">
                 <div class="left-box">
-                    <h2>麻布茶房　西武渋谷店</h2>
+                    <h2>麻布茶房<br><span>西武渋谷店</span></h2>
                     <p>名物：宇治金時<br>
                         営業時間：<br>11:00〜21:00 <br>
                         定休日：西武渋谷に準ずる</p>
