--- a/sinzyuku.html
+++ b/sinzyuku.html
@@ -310,7 +310,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>甘味茶屋 七葉 新宿小田急百貨店</h2>
+                    <h2>甘味茶屋 七葉<br><span>新宿小田急百貨店</span></h2>
                     <p>名物：抹茶パフェ<br>
                         営業時間：<br>10:00〜20:00 <br>
                         定休日：新宿小田急に準じる</p>
@@ -431,7 +431,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
                 <div class="right-box">
-                    <h2>⼀〇⼋抹茶茶廊　ルミネ新宿店</h2>
+                    <h2>⼀〇⼋抹茶茶廊<br><span>ルミネ新宿店</span></h2>
                     <p>名物：抹茶大判焼き<br>
                         営業時間：<br>[月~金]11:00〜21:30 <br>
                         [土、日、祝]10:30〜21:30<br>
